fix(text-field): fix style on small inputs

--- a/src/components/text-field/style/lumapps/_mixins.scss
+++ b/src/components/text-field/style/lumapps/_mixins.scss
@@ -77,6 +77,7 @@
 }
 
 @mixin lumx-text-field-input-clear() {
+    flex-shrink: 0;
     margin-left: $lumx-spacing-unit / 2;
 }
 
