--- a/src/components/text-field/style/lumapps/_variables.scss
+++ b/src/components/text-field/style/lumapps/_variables.scss
@@ -2,4 +2,4 @@ $lumx-text-field-height: map-get($lumx-sizes, 'm') !default;
 $lumx-text-field-horizontal-padding: $lumx-spacing-unit * 1.5 !default;
 $lumx-text-field-vertical-padding: $lumx-spacing-unit * 1.5 !default;
 $lumx-text-field-transition-duration: 100ms;
-$lumx-text-field-min-width: 150px;
+$lumx-text-field-min-width: 100px;
